# yousearch-client

./: .gitignore  .htaccess  Cargo.toml  README.md  index.html  run
docs/: index.html  output-5ade8bfd41311ca4.css  output-9b2c3ae00267ced1.css  output-bc115ee7c83dbdf.css  output-c1efc8fd79f2a5d5.css  yousearch-client-17b351f508362665.js  yousearch-client-17b351f508362665_bg.wasm  yousearch-client-7a199228a90a8ff7.js  yousearch-client-7a199228a90a8ff7_bg.wasm  yousearch-client-9e17f8b9e6aeda6a.js  yousearch-client-9e17f8b9e6aeda6a_bg.wasm  yousearch-client-aa1f7974e7f69bf3.js  yousearch-client-aa1f7974e7f69bf3_bg.wasm  yousearch-client-d643f02a2f1fba98.js  yousearch-client-d643f02a2f1fba98_bg.wasm  yousearch-client-dd229979caad2d83.js  yousearch-client-dd229979caad2d83_bg.wasm  yousearch-client-e498b0126af70b93.js  yousearch-client-e498b0126af70b93_bg.wasm  yousearch-client-eb4084260dee0544.js  yousearch-client-eb4084260dee0544_bg.wasm
src/: main.rs
src/utils/: inputs.rs
