[package]
name = "yousearch-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
gloo-console = "0.2.3"
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen-futures = "0.4"